fix customers list overflow

--- a/src/features/customers/Customers.scss
+++ b/src/features/customers/Customers.scss
@@ -10,7 +10,8 @@
 
   .list {
     width: calc(100% - 20px - 20px);
-    overflow-x: auto;
+    max-height: calc(100% - 20px - 20px);
+    overflow: auto;
     padding: 20px;
     border-radius: 10px;
     background-color: #FFFFFF;
@@ -32,7 +33,8 @@
       tbody {
 
         tr {
-          border-top: 1px solid $input-border-color;
+          // border-top: 1px solid $input-border-color;
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
           cursor: pointer;
 
           &:hover {
